k8s.io/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-io
spec:
  selector:
    app: k8s-io
  type: LoadBalancer
  loadBalancerIP: 104.197.208.221
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
