k8s.io/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-io
spec:
  selector:
    app: k8s-io
  type: LoadBalancer
  loadBalancerIP: 23.236.58.218
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
