k8s.io/service-short-urls.yaml
apiVersion: v1
kind: Service
metadata:
  name: short-url-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: short-urls
  type: LoadBalancer
