k8s.io/ingress-canary.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-io
  labels:
    app: k8s-io
  namespace: k8s-io-canary
  annotations:
    kubernetes.io/ingress.global-static-ip-name: k8s-io-ingress-canary
spec:
  tls:
  - secretName: ssl
  backend:
    serviceName: k8s-io
    servicePort: http
